specs/021-spread-rest-defaults/examples/invalid/required-after-optional.ts
function f(a: int = 0, b: int): int {
  return a + b;
}
console.log(f(1, 2));
